# lattice-agreement

./: CMakeLists.txt  Dockerfile  LICENSE  README.md  build.sh  main.cpp  run_zheng.sh  setup.sh
coordinator/: CMakeLists.txt  la_coordinator.h  main.cpp
coordinator_generalized/: CMakeLists.txt  gla_coordinator.h  main.cpp
faleiro/: CMakeLists.txt  acceptor.h  main.cpp  proposer.h  protocol.h
faleiro/configs/: acceptors.cfg
faleiro_generalized/: CMakeLists.txt  acceptor.h  learner.h  main.cpp  proposer.h  protocol.h
general/: generalized_lattice_agreement.h  lattice.h  lattice_agreement.h  logger.h  network.h  tcp_client.h  thread_pool.h
general/net/: connection.h  message.h  net_async.h  server.h
generalizer/: CMakeLists.txt  generalizer.h  main.cpp  protocol.h
lattice/: lattice.h
zheng/: CMakeLists.txt  generator.h  main.cpp  protocol.h  zheng_la.h
